force-app/main/default/objects/Candidate__c/fields/AI_Candidate_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Candidate_Score__c</fullName>
    <label>AI Candidate Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>