force-app/main/default/objects/Candidate__c/fields/Hiring_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Recommendation__c</fullName>
    <label>Hiring Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highly Recommended</fullName>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Average Fit</fullName>
            </value>
            <value>
                <fullName>Low Fit</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>